<resources>
    <string name="app_name">BMI計算機</string>

    <string name="tv_a">年齢</string>
    <string name="tv_age">歳</string>
    <string name="tv_h">身長</string>
    <string name="tv_cm">cm</string>
    <string name="tv_w">体重</string>
    <string name="tv_kg">kg</string>
    <string name="bt_m">計算</string>
    <string name="bt_clear">クリア</string>
    <string name="dialog_title">警告</string>
    <string name="dialog_msg">適切な肥満度を求めるためには、6歳未満の場合はカウプ指数が、6歳から15歳まではローレル指数が使われます。本アプリはBMIのみに対応しています。</string>
    <string name="dialog_btn">確認</string>
    <string name="tx_tvt1">あなたの肥満度は</string>
    <string name="tx_tvt2">あなたの適正体重は</string>
</resources>